fix(arc-1839): reduce gap size in card without description on mobile
https://meemoo.atlassian.net/browse/ARC-1839

--- a/src/styles/admin-core/content-blocks/_cards-without-description.scss
+++ b/src/styles/admin-core/content-blocks/_cards-without-description.scss
@@ -14,6 +14,10 @@ $img-size-mobile: 10.2rem;
 		display: grid;
 		grid-gap: $spacer-lg;
 		grid-template-columns: 1fr 1fr 1fr;
+
+		@include respond-to("md") {
+			grid-gap: $spacer-sm;
+		}
 	}
 
 	@container (max-width: 120rem) {
